--- a/Drum Kit Completed/index.html
+++ b/Drum Kit Completed/index.html
@@ -24,7 +24,7 @@
 <script src="index.js" charset="utf-8"></script>
 
 <footer>
-  Made with ❤️ in London.
+  Made with Love in India.
 </footer>
 </body>
 </html>
