--- a/Drum Kit Completed/index.html
+++ b/Drum Kit Completed/index.html
@@ -10,6 +10,9 @@
 
 <body>
   <h1 id="title">Drum 🥁 Kit</h1>
+  <p>This is a small project using HTML CSS JavaScript</p>
+  <br>
+  
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
@@ -25,6 +28,7 @@
 
 <footer>
   Made with Love in India.
+  Thanks to visit us :)
 </footer>
 </body>
 </html>
